fix for poor visibility in dark mode

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -5,4 +5,5 @@ $navbar-fg: #f9bf07;
 
 $body-bg: #2c2825;
 $body-fg: #f5f4f3;
+$body-color: #f5f4f3;
 $link-color: #5881c1;
